--- a/_pages/code.html
+++ b/_pages/code.html
@@ -1,14 +1,14 @@
 ---
 layout: archive
-title: "Portfolio"
-permalink: /portfolio/
+title: "Projects"
+permalink: /code/
 author_profile: true
 ---
 
 {% include base_path %}
 
 
-{% for post in site.portfolio %}
+{% for post in site.code %}
   {% include archive-single.html %}
 {% endfor %}
 
