--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -1,14 +1,13 @@
 ---
 layout: archive
 title: "Projects"
-permalink: /code/
+permalink: /projects/
 author_profile: true
 ---
 
 {% include base_path %}
 
-
-{% for post in site.code %}
+{% for post in site.projects reversed %}
   {% include archive-single.html %}
 {% endfor %}
 
