--- a/_pages/hobbies.html
+++ b/_pages/hobbies.html
@@ -1,13 +1,15 @@
 ---
 layout: archive
-title: "Projects"
-permalink: /projects/
+title: "Hobbies"
+permalink: /hobbies/
 author_profile: true
 ---
 
 {% include base_path %}
 
-{% for post in site.projects reversed %}
+Hi
+
+{% for post in site.hobbies reversed %}
   {% include archive-single.html %}
 {% endfor %}
 
