--- a/_pages/research.html
+++ b/_pages/research.html
@@ -1,13 +1,13 @@
 ---
 layout: archive
-title: "Projects"
-permalink: /projects/
+title: "Research"
+permalink: /research/
 author_profile: true
 ---
 
 {% include base_path %}
 
-{% for post in site.projects reversed %}
+{% for post in site.research reversed %}
   {% include archive-single.html %}
 {% endfor %}
 
