--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,13 +1,13 @@
 ---
 layout: archive
-title: "Projects"
-permalink: /projects/
+title: "Talks"
+permalink: /talks/
 author_profile: true
 ---
 
 {% include base_path %}
 
-{% for post in site.projects reversed %}
+{% for post in site.talks reversed %}
   {% include archive-single.html %}
 {% endfor %}
 
