--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -1,13 +1,13 @@
 ---
 layout: archive
-title: "Projects"
-permalink: /projects/
+title: "Blog Post"
+permalink: /blog/
 author_profile: true
 ---
 
 {% include base_path %}
 
-{% for post in site.projects reversed %}
+{% for post in site.blog reversed %}
   {% include archive-single.html %}
 {% endfor %}
 
