--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,11 +1,13 @@
 ---
 layout: archive
-title: "Teaching"
+title: "Publications"
 permalink: /teaching/
 author_profile: true
 ---
 
 {% include base_path %}
+
+I have been lucky enough to have publications and here they are:
 
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
