--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,12 +1,12 @@
 ---
 layout: archive
-title: "Portfolio"
+title: "Code projects"
 permalink: /portfolio/
 author_profile: true
 ---
 
 {% include base_path %}
-
+Here you can find the code projects I have developed so far in my research path and in the programming courses I have attended. You can find their respective repositories in my [github site](https://github.com/stephyriega). Hopefully, this projects can help other coders.
 
 {% for post in site.portfolio %}
   {% include archive-single.html %}
