--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -8,12 +8,9 @@ redirect_from:
 ---
 
 {% include base_path %}
-{% capture written_year %}'None'{% endcapture %}
+
+I have written blog posts about the topics I'm most passionate about in Economics. Appart from them, I also have a [Substack](https://ssmwhr.substack.com/) where I write entries about subjects that I was curious about or find fascinating.
+
 {% for post in site.posts %}
-  {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
-  {% if year != written_year %}
-    <h2 id="{{ year | slugify }}" class="archive__subtitle">{{ year }}</h2>
-    {% capture written_year %}{{ year }}{% endcapture %}
-  {% endif %}
   {% include archive-single.html %}
 {% endfor %}
