--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -9,7 +9,7 @@ redirect_from:
 
 {% include base_path %}
 
-I have written blog posts about the topics I'm most passionate about in Economics. Appart from them, I also have a [Substack](https://ssmwhr.substack.com/) where I write entries about subjects that I was curious about or find fascinating.
+I have written blog posts about the topics I'm most passionate about in Economics. Appart from them, I also have a Substack where I write entries about subjects that I was curious about or find fascinating.
 
 {% for post in site.posts %}
   {% include archive-single.html %}
