updated_photos_cod_2

--- a/portfolio-details-code-2.html
+++ b/portfolio-details-code-2.html
@@ -137,7 +137,7 @@
             <div class="portfolio-description">
               <h2>Python scripts </h2>
               <p>
-                This is a dashboard I created for a endline data collection and adapted to a free access data for a course of R with my collagues Sandra Martinez and Rosa Rojas. I used Shinny, a R package that makes it easy to build interactive web apps. It aims to keep track of the indicators we created to measure the data's quality through the field work. You can find the published dashboard here. 
+                This is a dashboard I created for data collection in an experimental evaluation project. I used Shinny, a R package, to keep track of the indicators we created to measure the data's quality through the field work. You can find the published dashboard here. 
               </p>
             </div>
           </div>
