--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="content d-flex flex-column justify-content-center">
               <h3>About Me</h3>
               <p>
-              I am a Research Assistant at <a href="https://www.grade.org.pe/">Group of Analysis for Development (GRADE)</a> and a Teacher Assistant at <a href="https://www.pucp.edu.pe/">Pontificia Universidad Catolica del Peru (PUCP)</a>. Currently, my research focuses on Causal Inference and Machine Learning methods. Previously, I have worked as a Research Analyst in many impact evaluation projects at <a href="https://poverty-action.org/">Innovations for Poverty Action (IPA)</a>. 
+              I am a Research Assistant at <a href="https://www.grade.org.pe/">Group of Analysis for Development (GRADE)</a> . Currently, my research focuses on Causal Inference and Machine Learning methods. Previously, I have worked as a Research Analyst in many impact evaluation projects at <a href="https://poverty-action.org/">Innovations for Poverty Action (IPA)</a>. 
               </p>
               <div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
