--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column align-items-right justify-content-center">
     <h1>Stephy Riega</h1>
-    <h2>Researcher and Applied Economist </h2>
+    <h2>Economist </h2>
     <a href="#about" class="btn-get-started scrollto"><i class="bi bi-chevron-double-down"></i></a>
   </section><!-- End Hero -->
 
@@ -98,7 +98,7 @@
             <div class="content d-flex flex-column justify-content-center">
               <h3>About Me</h3>
               <p>
-              I am a Research Assistant at <a href="https://www.grade.org.pe/">Group of Analysis for Development (GRADE)</a> . Currently, my research focuses on Causal Inference and Machine Learning methods. Previously, I have worked as a Research Analyst in many impact evaluation projects at <a href="https://poverty-action.org/">Innovations for Poverty Action (IPA)</a>. 
+              I am a Data Project Associate at the <a href="https://educationlab.uchicago.edu/">Education & Crime Urban Labs at the University of Chicago</a>. Currently, my work focuses on Causal Inference and Machine Learning methods. Previously, I've worked as a Research Assistant at <a href="https://www.grade.org.pe/">Group of Analysis for Development (GRADE)</a> and as a Research Analyst in many impact evaluation projects at <a href="https://poverty-action.org/">Innovations for Poverty Action (IPA)</a>. 
               </p>
               <div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
@@ -239,7 +239,7 @@
               <p>
               <ul>
                 <li>Surquillo, Lima, Peru </li>
-                <li>(+51) 966877042 </li>
+                <li>Chicago, Illinois, U.S.</li>
                 <li>riega.stephy@pucp.edu.pe</li>
               </ul>
               </p>
@@ -269,7 +269,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4> Research Assistant </h4>
-              <h5>2023 - Present</h5>
+              <h5>2023 - 2023</h5>
               <p><em> GRADE, Lima, Peru </em></p>
               <p>
               <ul>
