Update_CV_principal

--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
               <p><em>Economist with 2+ years experience in academic research. Worked on projects evaluating interventions in education and gender-based violence in Latin America, as well as projects related to female entrepreneurs and corruption. Collaborated with multilateral organizations and government and non-goverment institution using programming tools and quantitative methodologies.</em></p>
               <p>
               <ul>
-                <li>Surquillo, Lima, Peru </li>
-                <li>Chicago, Illinois, U.S.</li>
+<!--                 <li>Surquillo, Lima, Peru </li> -->
+<!--                 <li>Chicago, Illinois, The U.S.</li> -->
                 <li>riega.stephy@pucp.edu.pe</li>
               </ul>
               </p>
@@ -268,12 +268,22 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4> Data Project Associate </h4>
+              <h5>2023 - Present </h5>
+              <p><em> Urban Labs at the University of Chicago , Chicago, The U.S. </em></p>
+              <p>
+              <ul>
+<!--                 <li>Assisted PhD. Juan León Jara-Almonte in the implementation and impact evaluation of experimental intervention in Peru related to secondary education. </li> -->
+              </ul>
+              </p>
+            </div>
+            <div class="resume-item">
               <h4> Research Assistant </h4>
               <h5>2023 - 2023</h5>
               <p><em> GRADE, Lima, Peru </em></p>
               <p>
               <ul>
-                <li>Assisted PhD. Juan León Jara-Almonte in the implementation and impact evaluation of experimental intervention in Peru related to secondary education. </li>
+<!--                 <li>Assisted PhD. Juan León Jara-Almonte in the implementation and impact evaluation of experimental intervention in Peru related to secondary education. </li> -->
               </ul>
               </p>
             </div>
@@ -283,9 +293,9 @@
               <p><em>IPA, Lima, Peru </em></p>
               <p>
               <ul>
-                <li>Assisted in the implementation and impact evaluation of experimental interventions in El Salvador, Nicaragua, and Peru in partnership with BID, World Bank, and other institutions and various government and non-government organizations.</li>
-                <li>Helped in programming survey instruments and managing field and audit teams for data collection remotely.</li>
-                <li>Created dashboards in Shinny using R and PowerBI and automated process in Python for progress review of data collected via SurveyCTO and Twilio.</li>
+<!--                 <li>Assisted in the implementation and impact evaluation of experimental interventions in El Salvador, Nicaragua, and Peru in partnership with BID, World Bank, and other institutions and various government and non-government organizations.</li> -->
+<!--                 <li>Helped in programming survey instruments and managing field and audit teams for data collection remotely.</li> -->
+<!--                 <li>Created dashboards in Shinny using R and PowerBI and automated process in Python for progress review of data collected via SurveyCTO and Twilio.</li> -->
               </ul>
               </p>
             </div>
@@ -295,8 +305,8 @@
               <p><em> GRADE, Lima, Peru</em></p>
               <p>
               <ul>
-                <li>Assisted PhD. Martin Valdivia in data analysis of an RCT dataset related to a labor formalization program in Brazil using Stata and Latex.</li>
-                <li>Supported literature review and data analysis for corruption detection and fertility rate in Peru, using Stata and Machine Learning methods.</li>
+<!--                 <li>Assisted PhD. Martin Valdivia in data analysis of an RCT dataset related to a labor formalization program in Brazil using Stata and Latex.</li> -->
+<!--                 <li>Supported literature review and data analysis for corruption detection and fertility rate in Peru, using Stata and Machine Learning methods.</li> -->
               </ul>
               </p>
             </div>
