--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p> You can download my updated resume with more details <a href="https://stephyriega.github.io/images/CV_Riega_Eng.pdf">here.</a>  </p>
+          <p> You can download my updated resume with more details <a href="https://drive.google.com/file/d/12Coj7MvU4060w3pS4qvN6qLzjDn9Cxdt/view?usp=sharing">here.</a>  </p>
         </div>
 
         <div class="row">
@@ -270,7 +270,7 @@
             <div class="resume-item">
               <h4> Data Project Associate </h4>
               <h5>2023 - Present </h5>
-              <p><em> Urban Labs at the University of Chicago , Chicago, The U.S. </em></p>
+              <p><em> Education & Crime Urban Labs at the University of Chicago , Chicago, The U.S. </em></p>
               <p>
               <ul>
 <!--                 <li>Assisted PhD. Juan León Jara-Almonte in the implementation and impact evaluation of experimental intervention in Peru related to secondary education. </li> -->
