--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title> Stephy Riega Website</title>
+  <title> Stephy Riega Escalante Website</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -39,8 +39,8 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column align-items-right justify-content-center">
-    <h1>Stephy Riega</h1>
-    <h2>Economist </h2>
+    <h1>Stephy Riega Escalante </h1>
+    <h2> Economist </h2>
     <a href="#about" class="btn-get-started scrollto"><i class="bi bi-chevron-double-down"></i></a>
   </section><!-- End Hero -->
 
@@ -49,7 +49,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html">Stephy Riega</a></h1>
+        <h1><a href="index.html">Stephy Riega Escalante </a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -108,11 +108,9 @@
                     <!-- <span data-purecounter-start="0" data-purecounter-end="65" data-purecounter-duration="1" class="purecounter"></span> -->
                     <!-- <p><strong>Happy Clients</strong> consequuntur voluptas nostrum aliquid ipsam architecto ut.</p> -->
                     <ul>
-                      <li> Applied Microeconomics </li>
-                      <li> Data Science & Programming </li>
-                      <li> Public Policy </li>
-                      <li> Education </li>
-                      <li> Gender </li>
+                      <li> Applied Microeconomics & Data Science</li>
+                      <li>  Public Policy </li>
+                      <li> Education, Labor & Gender </li>
                     </ul>
                   </div>
                 </div>
