--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Stephy Riega</h4>
-              <p><em>Economist with 2+ years experience in academic research. Worked on projects evaluating interventions in education and gender-based violence in Latin America, as well as projects related to female entrepreneurs and corruption. Collaborated with multilateral organizations and government and non-goverment institution using programming tools and quantitative methodologies.</em></p>
+              <p><em>Economist with 3+ years experience in academic research. Worked on projects evaluating interventions in education and gender-based violence in Latin America, as well as projects related to female entrepreneurs and corruption. Collaborated with multilateral organizations and government and non-goverment institution using programming tools and quantitative methodologies.</em></p>
               <p>
               <ul>
 <!--                 <li>Surquillo, Lima, Peru </li> -->
@@ -245,7 +245,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Minor in Artificial Intelligence for Social Science &amp; Public Policy </h4>
+              <h4> Diploma in Artificial Intelligence for Social Science &amp; Public Policy </h4>
               <h5>2022 - Present </h5>
               <p><em>Laboratory of Artificial Intelligence and Computational Methods in the Social Sciences
                 (QLAB) - PUCP </em></p>
@@ -266,7 +266,7 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4> Data Project Associate </h4>
+              <h4> Research Analyst </h4>
               <h5>2023 - Present </h5>
               <p><em> Education & Crime Urban Labs at the University of Chicago , Chicago, The U.S. </em></p>
               <p>
