--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="content d-flex flex-column justify-content-center">
               <h3>About Me</h3>
               <p>
-              I am a Data Project Associate at the <a href="https://educationlab.uchicago.edu/">Education & Crime Urban Labs at the University of Chicago</a>. Currently, my work focuses on Causal Inference and Machine Learning methods. Previously, I've worked as a Research Assistant at <a href="https://www.grade.org.pe/">Group of Analysis for Development (GRADE)</a> and as a Research Analyst in many impact evaluation projects at <a href="https://poverty-action.org/">Innovations for Poverty Action (IPA)</a>. 
+              I am a Research Analyst at the <a href="https://educationlab.uchicago.edu/">Education & Crime Urban Labs at the University of Chicago</a>. Currently, my work focuses on Causal Inference and Machine Learning methods. Previously, I've worked as a Research Assistant at <a href="https://www.grade.org.pe/">Group of Analysis for Development (GRADE)</a> and as a Research Analyst at <a href="https://poverty-action.org/">Innovations for Poverty Action (IPA)</a>. 
               </p>
               <div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
@@ -108,9 +108,9 @@
                     <!-- <span data-purecounter-start="0" data-purecounter-end="65" data-purecounter-duration="1" class="purecounter"></span> -->
                     <!-- <p><strong>Happy Clients</strong> consequuntur voluptas nostrum aliquid ipsam architecto ut.</p> -->
                     <ul>
-                      <li> Applied Microeconomics & Data Science</li>
+                      <li> Applied Microeconomics </li>
                       <li>  Public Policy </li>
-                      <li> Education, Labor & Gender </li>
+                      <li> Data Science </li>
                     </ul>
                   </div>
                 </div>
@@ -122,9 +122,8 @@
                     <!-- <span data-purecounter-start="0" data-purecounter-end="85" data-purecounter-duration="1" class="purecounter"></span> -->
                     <!-- <p><strong>Projects</strong> adipisci atque cum quia aspernatur totam laudantium et quia dere tan</p> -->
                     <ul>
-                      <!-- <li> B.S. in Economics, 2022<br><span style="font-size: 0.9em; color: gray;">PUCP</span></li>
-                      <li> Diploma of Specialization in Data Science for Social Science and Public Policy<br><span style="font-size: 0.9em; color: gray;">QLAB - PUCP</span></li> -->
                       <li> Awarded with the Extraordinary Student Research Fund <br><span style="font-size: 0.9em; color: gray;">VRI - PUCP</span></li>
+                      <li> Awarded First Place, Thesis Summary Category, XXX CIES Annual Research Competition <br><span style="font-size: 0.9em; color: gray;">CIES & UNFPA </span></li>
                     </ul>
                   </div>
                 </div>
@@ -230,31 +229,26 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Stephy Riega</h4>
-              <p><em>Economist with 3+ years experience in academic research. Worked on projects evaluating interventions in education and gender-based violence in Latin America, as well as projects related to female entrepreneurs and corruption. Collaborated with multilateral organizations and government and non-goverment institution using programming tools and quantitative methodologies.</em></p>
+              <p><em> Economist with 3+ years experience in academic research. </em></p>
               <p>
-              <ul>
-<!--                 <li>Surquillo, Lima, Peru </li> -->
-<!--                 <li>Chicago, Illinois, The U.S.</li> -->
-                <li>riega.stephy@pucp.edu.pe</li>
-              </ul>
               </p>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4> Diploma in Artificial Intelligence for Social Science &amp; Public Policy </h4>
-              <h5>2022 - Present </h5>
+              <!--<h5>2022 - Present </h5> 
               <p><em>Laboratory of Artificial Intelligence and Computational Methods in the Social Sciences
-                (QLAB) - PUCP </em></p>
+                (QLAB) - PUCP </em></p> -->
               <!-- <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p> -->
             </div> 
             <div class="resume-item">
-              <h4>Bachelor of Science in Economics</h4>
-              <h5>2017 - 2022</h5>
-              <p><em> PUCP </em></p>
+              <h4> Bachelor of Science in Economics</h4>
+              <!-- <h5>2017 - 2022</h5>
+              <p><em> PUCP </em></p> -->
               <ul>
                 <li> <strong>Graduate level courses</strong>: Social Policy Design and Evaluation, Advanced Econometrics: Cross-Sectional and
                   Panel Econometrics, Fundamentals of Real Analysis </li>
@@ -267,8 +261,8 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4> Research Analyst </h4>
-              <h5>2023 - Present </h5>
-              <p><em> Education & Crime Urban Labs at the University of Chicago , Chicago, The U.S. </em></p>
+              <!--  <h5>2023 - Present </h5> -->
+              <p><em> Education & Crime Urban Labs at the University of Chicago </em></p>
               <p>
               <ul>
 <!--                 <li>Assisted PhD. Juan León Jara-Almonte in the implementation and impact evaluation of experimental intervention in Peru related to secondary education. </li> -->
@@ -277,8 +271,8 @@
             </div>
             <div class="resume-item">
               <h4> Research Assistant </h4>
-              <h5>2023 - 2023</h5>
-              <p><em> GRADE, Lima, Peru </em></p>
+              <!--  <h5>2023 - 2023</h5> -->
+              <p><em> GRADE </em></p>
               <p>
               <ul>
 <!--                 <li>Assisted PhD. Juan León Jara-Almonte in the implementation and impact evaluation of experimental intervention in Peru related to secondary education. </li> -->
@@ -287,24 +281,13 @@
             </div>
             <div class="resume-item">
               <h4> Research Analyst</h4>
-              <h5>2021 - 2023</h5>
-              <p><em>IPA, Lima, Peru </em></p>
+              <!-- <h5>2021 - 2023</h5> -->
+              <p><em> IPA </em></p>
               <p>
               <ul>
 <!--                 <li>Assisted in the implementation and impact evaluation of experimental interventions in El Salvador, Nicaragua, and Peru in partnership with BID, World Bank, and other institutions and various government and non-government organizations.</li> -->
 <!--                 <li>Helped in programming survey instruments and managing field and audit teams for data collection remotely.</li> -->
 <!--                 <li>Created dashboards in Shinny using R and PowerBI and automated process in Python for progress review of data collected via SurveyCTO and Twilio.</li> -->
-              </ul>
-              </p>
-            </div>
-            <div class="resume-item">
-              <h4>Research Intern </h4>
-              <h5>2021 - 2021</h5>
-              <p><em> GRADE, Lima, Peru</em></p>
-              <p>
-              <ul>
-<!--                 <li>Assisted PhD. Martin Valdivia in data analysis of an RCT dataset related to a labor formalization program in Brazil using Stata and Latex.</li> -->
-<!--                 <li>Supported literature review and data analysis for corruption detection and fertility rate in Peru, using Stata and Machine Learning methods.</li> -->
               </ul>
               </p>
             </div>
