--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-python"></i></div>
               <h4 class="title"><a href="">Python </a></h4>
-              <p class="description">ML - Web Scrapping - Geocoding</p>
+              <p class="description"> </p>
             </div>
           </div>
 
@@ -319,7 +319,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bi bi-r-circle-fill"></i></div>
               <h4 class="title"><a href=""> R </a></h4>
-              <p class="description">ML - Dashboards </p>
+              <p class="description">  </p>
             </div>
           </div>
 
@@ -327,7 +327,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bi bi-database-gear"></i></div>
               <h4 class="title"><a href=""> Stata </a></h4>
-              <p class="description">Econometrics - Data </p>
+              <p class="description"> </p>
             </div>
           </div>
 
@@ -335,7 +335,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bi bi-clipboard2-check"></i></div>
               <h4 class="title"><a href="">Survey CTO</a></h4>
-              <p class="description"> Survey programming </p>
+              <p class="description"> </p>
             </div>
           </div>       
         </div>
@@ -348,16 +348,16 @@
           <div class="col-md-6 col-lg-3 align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-kanban"></i></div>
-              <h4 class="title"><a href="">Power BI</a></h4>
-              <p class="description">Dashboard programming </p>
+              <h4 class="title"><a href="">Causal Inference </a></h4>
+              <p class="description"> </p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-git"></i></div>
-              <h4 class="title"><a href="">Git/Github</a></h4>
-              <p class="description">Version control commands</p>
+              <h4 class="title"><a href="">Git</a></h4>
+              <p class="description"></p>
             </div>
           </div>
 
@@ -365,15 +365,15 @@
             <div class="icon-box">
               <div class="icon"><i class="bi bi-markdown-fill"></i></div>
               <h4 class="title"><a href="">Markdown & Latex</a></h4>
-              <p class="description">Text conversion</p>
+              <p class="description"></p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-bar-chart-fill"></i></div>
-              <h4 class="title"><a href="">Analytics</a></h4>
-              <p class="description">Econometrics - ML - Causal Inference </p>
+              <h4 class="title"><a href="">Machine Learning </a></h4>
+              <p class="description"> </p>
             </div>
           </div>
 
@@ -632,12 +632,12 @@
             <div class="info">
               <div class="d-flex align-items-center">
                 <i class="bi bi-geo-alt"></i>
-                <p>Barrio Medico <br> Surquillo, Lima, Peru</p>
+                <p> Surquillo, Lima, Peru</p>
               </div>
 
               <div class="d-flex align-items-center mt-4">
                 <i class="bi bi-envelope"></i>
-                <p>riega.stephy@pucp.edu.pe</p>
+                <p>sriega@uchicago.edu</p>
               </div>
 
               <!-- <div class="d-flex align-items-center mt-4">
